--- a/Lettuce Browser/Pro - FirebaseInfo/GoogleService-Info.plist
+++ b/Lettuce Browser/Pro - FirebaseInfo/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.lettucebrowser.iostuitui</string>
+	<string>com.lettucebrowser.iosyaho</string>
 	<key>PROJECT_ID</key>
 	<string>lettuce-browser-b1df4</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:422731641632:ios:73703623d7cdce6502dd45</string>
+	<string>1:422731641632:ios:45f408db5b5136b902dd45</string>
 </dict>
 </plist>
